# Resume-evaluator

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_main_with_mock.py
src/: credits.json  main.py  readme.txt
src/agents/: email_agent.py  github_agent.py  linkedin_agent.py  resume_agent.py  skills_verifier.py  test_simple.py
src/config/: api_config.toml  criteria.toml  recruiter_config.toml
src/tasks/: analyze_task.py  fetch_task.py  linkedin_task.py  parse_task.py  verify_task.py
src/utils/: auth.py  config_validator.py  error_handler.py  get_gmail_token.py  gmail_credentials.json  gmail_credentials.json.example  logger.py  parsers.py  report_generator.py
