[project]
name = "resume-evaluator"
version = "1.0.0"
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai>=0.28.0",
    "pymupdf>=1.23.0",
    "python-docx>=1.1.0",
    "google-api-python-client>=2.120.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "toml>=0.10.2",
    "pytesseract>=0.3.13",
]

[project.scripts]
evaluate-resumes = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
